tests/targets/compile_error/cpp_test_compile_error.cpp
// @lint-ignore CLANGTIDY
#error Compile error
